2004-12-03  Bradley Bell  <btb@icculus.org>

	* include/cfile.h, include/physfsx.h: use PATH_MAX for hog
	pathname, ensure correct translation of path separators

2004-12-03  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* misc/strutil.c: fix stricmp and strnicmp

	* main/mission.c: set builtin_hogsize to 0 for the Descent 1 built
	in mission

2004-12-02  Bradley Bell  <btb@icculus.org>

	* include/physfsx.h: use sprintf in PHYSFSX_getRealPath() because
	I couldn't figure out why the previous code kept segfaulting under
	linux.

	* main/kconfig.c: disable call to reset_cockpit() which was
	causing the "letterbox" bug

	* main/inferno.c: don't die if title screens not found

2004-12-02  Martin Schaffner  <maschaffner@gmx.ch>

	* configure.ac: require PhysicsFS header and library

2004-12-02  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/bm.c, main/piggy.c: fix cfile bugs from recent changes

	* D2X.make: fix build on Carbon by adding digiobj.c

	* main/mission.c: set builtin_hogsize for non-built-in missions

	* main/mission.c: pass individual mission around instead of whole list

	* main/mission.c: remove mission list from global memory

2004-12-02  Bradley Bell  <btb@icculus.org>

	* include/cfile.h, include/physfsx.h: fix RELEASE build, make sure
	path separator gets added to hogdir

2004-12-01  Bradley Bell  <btb@icculus.org>

	* README, configure.ac, VisualC/d2x/d2x.dsp,
	VisualC/d2xgl/d2xgl.dsp, VisualC/libmve/libmve.dsp,
	VisualC/mveplayer/mveplayer.dsp, include/loadgl.h,
	include/ogl_init.h, include/physfsx.h: Updated MSVC build, now
	uses dynamic opengl loading

2004-12-01  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* arch/ogl/gr.c: make write_bmp use PhysicsFS

	* include/args.h, misc/args.c: new AppendArgs function. This
	separates the copying of the arguments passed to main() from the
	reading of the arguments file

	* include/cfile.h: Use portable PHYSFSX_getRealPath function, Use
	the flexible cfgets, Fix compiling issues in MPW.
